--- a/TeePhrase/Views/Shared/_CarouselPartial.cshtml
+++ b/TeePhrase/Views/Shared/_CarouselPartial.cshtml
@@ -1,28 +1,28 @@
-﻿<div class="col-md-8">
+﻿@model List<MediaItem>
+
+<div class="col-md-8">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-            <li data-target="#myCarousel" data-slide-to="4"></li>
+            @{
+                var cssClass = "active";
+            }
+            @for (int i = 0; i < Model.Count(); i++)
+            {
+                <li data-target="#myCarousel" data-slide-to="@i" class="@cssClass"></li>
+                cssClass = null;
+            }
         </ol>
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="https://via.placeholder.com/800x400?text=FPO+800x400+(1)" alt="design-01.jpg">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="https://via.placeholder.com/800x400?text=FPO+800x400+(2)" alt="design-02.jpg">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="https://via.placeholder.com/800x400?text=FPO+800x400+(3)" alt="design-03.jpg">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="https://via.placeholder.com/800x400?text=FPO+800x400+(4)" alt="design-04.jpg">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="https://via.placeholder.com/800x400?text=FPO+800x400+(5)" alt="design-05.jpg">
-            </div>
+            @{
+                cssClass = "active";
+            }
+            @foreach (var photo in Model)
+            {
+                <div class="carousel-item @cssClass">
+                    <img class="d-block w-100" src="@photo.Url" alt="@photo.Name">
+                </div>
+                cssClass = null;
+            }
         </div>
         <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
