--- a/TeePhrase/Views/_ViewImports.cshtml
+++ b/TeePhrase/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using TeePhrase
 @using TeePhrase.Models
+@using Umbraco.Headless.Client.Models
+@using Umbraco.Headless.Client.Services
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
