--- a/TeePhrase/Views/_ViewImports.cshtml
+++ b/TeePhrase/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using TeePhrase.Models
 @using Umbraco.Headless.Client.Models
 @using Umbraco.Headless.Client.Services
+@using TeePhrase.Extensions
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
